--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/globals/k8s-object-events/k8s-object-events.component.scss
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/globals/k8s-object-events/k8s-object-events.component.scss
@@ -1,14 +1,16 @@
+@import "../../variables.scss";
+
 .KubeEventDetails {
   .event {
-    margin-bottom: $margin * 4;
+    margin-bottom: 8px * 4;
 
     &:last-child {
       margin-bottom: 0;
     }
 
     .title {
-      margin-top: $margin * 2;
-      margin-bottom: $margin;
+      margin-top: 8px * 2;
+      margin-bottom: 8px;
       font-weight: bold;
       word-break: break-word;
 
