--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/globals/k8s-object-param-toggler/k8s-object-param-toggler.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/globals/k8s-object-param-toggler/k8s-object-param-toggler.component.html
@@ -3,7 +3,7 @@
     <div class="param-label">{{label}}</div>
     <div class="param-link" (click)="toggleOpen()">
       <span class="param-link-text">{{link()}}</span>
-      <Icon material={icon}/>
+      <!-- TODO <Icon material={icon}/>-->
     </div>
   </div>
   <div class="param-content" [class.open]="open">
