--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/globals/k8s-object-sub-title/k8s-object-sub-title.component.scss
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/globals/k8s-object-sub-title/k8s-object-sub-title.component.scss
@@ -1,11 +1,11 @@
 .SubTitle {
-  --sub-title-spacing: #{$margin * 2};
+  --sub-title-spacing: #{8px * 2};
 
   text-transform: uppercase;
   font-weight: bold;
 
   &:not(.compact) {
-    padding-bottom: $margin;
+    padding-bottom: 8px;
   }
 
   &:not(:first-child) {
