--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/config-map/k8s-config-map-details/k8s-config-map-details.component.scss
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/config-map/k8s-config-map-details/k8s-config-map-details.component.scss
@@ -1,15 +1,17 @@
+@import "../../../body-kubernetes.mixins.scss";
+
 .ConfigMapDetails {
   .data {
-    margin-bottom: $margin * 2;
+    margin-bottom: 8px * 2;
 
     .name {
       color: $textColorSecondary;
-      font-weight: $font-weight-bold;
-      padding-bottom: $padding / 2;
+      font-weight: 500;
+      padding-bottom: 8px / 2;
     }
   }
 
   .save-btn {
-    margin-top: $margin;
+    margin-top: 8px;
   }
 }
