--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/config-map/k8s-config-maps/k8s-config-maps.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/config-map/k8s-config-maps/k8s-config-maps.component.html
@@ -32,7 +32,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <ConfigMapMenu object={item}/>
+        <!-- TODO <ConfigMapMenu object={item}/> -->
       </td>
     </ng-container>
 
