--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/cron-job/k8s-cron-job-details/k8s-cron-job-details.component.scss
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/cron-job/k8s-cron-job-details/k8s-cron-job-details.component.scss
@@ -1,8 +1,10 @@
+@import "../../../body-kubernetes.mixins.scss";
+
 .CronJobDetails {
   .job {
     .title {
-      margin-top: $margin * 2;
-      margin-bottom: $margin;
+      margin-top: 8px * 2;
+      margin-bottom: 8px;
 
       a {
         color: $colorInfo;
