--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/daemonset/k8s-daemonsets/k8s-daemonsets.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/daemonset/k8s-daemonsets/k8s-daemonsets.component.html
@@ -46,7 +46,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <DaemonSetMenu object={item}/>
+        <!-- TODO <DaemonSetMenu object={item}/> -->
       </td>
     </ng-container>
 
