--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/endpoint/k8s-endpoint-subset-list/k8s-endpoint-subset-list.component.scss
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/endpoint/k8s-endpoint-subset-list/k8s-endpoint-subset-list.component.scss
@@ -1,7 +1,7 @@
 .EndpointSubsetList {
   .title {
-    margin-top: $margin * 2;
-    margin-bottom: $margin;
+    margin-top: 8px * 2;
+    margin-bottom: 8px;
     font-weight: bold;
   }
 }
