--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/horizontal-pod-autoscaler/k8s-horizontal-pod-autoscalers/k8s-horizontal-pod-autoscalers.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/horizontal-pod-autoscaler/k8s-horizontal-pod-autoscalers/k8s-horizontal-pod-autoscalers.component.html
@@ -56,7 +56,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <HpaMenu object={item}/>
+        <!-- TODO <HpaMenu object={item}/> -->
       </td>
     </ng-container>
 
