--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/job/k8s-jobs/k8s-jobs.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/job/k8s-jobs/k8s-jobs.component.html
@@ -48,7 +48,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <JobMenu object={item}/>
+        <!-- TODO <JobMenu object={item}/> -->
       </td>
     </ng-container>
 
