--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/namespace/k8s-namespace-details/k8s-namespace-details.component.scss
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/namespace/k8s-namespace-details/k8s-namespace-details.component.scss
@@ -1,3 +1,5 @@
+@import "../../../body-kubernetes.mixins.scss";
+
 .NamespaceDetails {
   .status {
     @include namespaceStatus;
@@ -5,7 +7,7 @@
 
   .quotas {
     .value a {
-      margin-right: $margin;
+      margin-right: 8px;
     }
   }
 }
