--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/pod/k8s-pod-details-affinities/k8s-pod-details-affinities.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/pod/k8s-pod-details-affinities/k8s-pod-details-affinities.component.html
@@ -2,12 +2,12 @@
   <aaim-k8s-object-param-toggler [label]="LibNodeKubernetesObjectHelpers.getAffinityNumber(k8sObject).length">
 
     <div class="ace-container">
-      <AceEditor
+      <!-- TODO <AceEditor
         mode="yaml"
         value={jsYaml.dump(LibNodeKubernetesObjectHelpers.getAffinity(k8sObject))}
         showGutter={false}
         readOnly
-      />
+      />-->
     </div>
 
   </aaim-k8s-object-param-toggler>
