--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/pod/k8s-pod-details-statuses/k8s-pod-details-statuses.component.scss
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/pod/k8s-pod-details-statuses/k8s-pod-details-statuses.component.scss
@@ -1,6 +1,8 @@
+@import "../../../body-kubernetes.mixins.scss";
+
 .PodDetailsStatuses {
   span {
-    padding-right: $margin;
+    padding-right: 8px;
 
     &.running {
       color: $pod-status-running-color;
