--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/globals/k8s-object-event-icon/k8s-object-event-icon.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/globals/k8s-object-event-icon/k8s-object-event-icon.component.html
@@ -1,5 +1,5 @@
 <mat-icon fontSet="fa" fontIcon="warning" class="KubeEventIcon" [class.wagning]="isWarning()" [matTooltip]="getMessage()" matTooltipClass="KubeEventTooltip"></mat-icon>
-<!--
+<!-- TODO
 
 <TooltipContent className="KubeEventTooltip">
         {event.message}
