--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/cron-job/k8s-cron-jobs/k8s-cron-jobs.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/cron-job/k8s-cron-jobs/k8s-cron-jobs.component.html
@@ -17,9 +17,9 @@
     <ng-container matColumnDef="warning">
       <th mat-header-cell *matHeaderCellDef class="warning"></th>
       <td mat-cell *matCellDef="let element">
-        <aaim-k8s-object-event-icon [k8sObject]="element" [filterEvents]="(e) => {
+        <aaim-k8s-object-event-icon [k8sObject]="element"><!-- TODO [filterEvents]="(e) => {
           !isNeverRun(element) ? e : e.filter(event => event.reason !== 'FailedNeedsStart')
-        }"></aaim-k8s-object-event-icon>
+        }"> --> </aaim-k8s-object-event-icon>
       </td>
     </ng-container>
 
@@ -59,7 +59,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <CronJobMenu object={item}/>
+        <!-- TODO <CronJobMenu object={item}/> -->
       </td>
     </ng-container>
 
