--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/deployment/k8s-deployments/k8s-deployments.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/deployment/k8s-deployments/k8s-deployments.component.html
@@ -53,7 +53,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <DeploymentMenu object={item}/>
+        <!-- TODO <DeploymentMenu object={item}/> -->
       </td>
     </ng-container>
 
