--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/endpoint/k8s-endpoints/k8s-endpoints.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/endpoint/k8s-endpoints/k8s-endpoints.component.html
@@ -32,7 +32,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <EndpointMenu object={item}/>
+        <!-- TODO <EndpointMenu object={item}/> -->
       </td>
     </ng-container>
 
