--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/ingress/k8s-ingress-details/k8s-ingress-details.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/ingress/k8s-ingress-details/k8s-ingress-details.component.html
@@ -3,12 +3,12 @@
   <mat-spinner center *ngIf="!isLoaded; else metrics"></mat-spinner>
 
   <ng-template #metrics>
-    <aaim-k8s-object-resource-metrics
+    <!-- TODO <aaim-k8s-object-resource-metrics
       [loader]="daemonSetStore.loadMetrics(ingress)"
       [tabs]="podMetricTabs" [object]="ingress" [params]="metrics">
 
       <aaim-k8s-ingress-details-charts></aaim-k8s-ingress-details-charts>
-    </aaim-k8s-object-resource-metrics>
+    </aaim-k8s-object-resource-metrics> -->
   </ng-template>
 
   <aaim-k8s-object-metadata [k8sObject]="k8sObject"></aaim-k8s-object-metadata>
