--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/ingress/k8s-ingresses/k8s-ingresses.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/ingress/k8s-ingresses/k8s-ingresses.component.html
@@ -34,7 +34,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <IngressMenu object={item}/>
+        <!-- TODO <IngressMenu object={item}/> -->
       </td>
     </ng-container>
 
