--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/namespace/k8s-namespaces/k8s-namespaces.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/namespace/k8s-namespaces/k8s-namespaces.component.html
@@ -36,7 +36,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <NamespaceMenu object={item}/>
+        <!-- TODO <NamespaceMenu object={item}/> -->
       </td>
     </ng-container>
 
