--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/network-policy/k8s-network-policies/k8s-network-policies.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/network-policy/k8s-network-policies/k8s-network-policies.component.html
@@ -35,7 +35,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <NetworkPolicyMenu object={item}/>
+        <!-- TODO <NetworkPolicyMenu object={item}/> -->
       </td>
     </ng-container>
 
