--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/node/k8s-node-details/k8s-node-details.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/node/k8s-node-details/k8s-node-details.component.html
@@ -3,25 +3,25 @@
   <mat-spinner center *ngIf="!isLoaded; else metrics"></mat-spinner>
 
   <ng-template #metrics>
-    <aaim-k8s-object-resource-metrics
+    <!-- TODO <aaim-k8s-object-resource-metrics
       [loader]="nodesStore.loadMetrics(deployment)"
       [tabs]="metricTabs" [object]="node" [params]="metrics">
 
       <aaim-k8s-pod-details-charts></aaim-k8s-pod-details-charts>
-    </aaim-k8s-object-resource-metrics>
+    </aaim-k8s-object-resource-metrics> -->
   </ng-template>
 
   <aaim-k8s-object-metadata [k8sObject]="k8sObject"></aaim-k8s-object-metadata>
 
   <aaim-k8s-object-item [name]="'Capacity'">
     CPU: {{k8sObject.info.data.status.capacity.cpu}},&nbsp;
-    Memory: {{Math.floor(parseInt(k8sObject.info.data.status.capacity.memory) / 1024)}}Mi,&nbsp;
+    Memory: {{memoryParser(k8sObject.info.data.status.capacity.memory)}}Mi,&nbsp;
     Pods: {{k8sObject.info.data.status.capacity.pods}}
   </aaim-k8s-object-item>
 
   <aaim-k8s-object-item [name]="'Allocatable'">
     CPU: {{k8sObject.info.data.status.allocatable.cpu}},&nbsp;
-    Memory: {{Math.floor(parseInt(k8sObject.info.data.status.allocatable.memory) / 1024)}}Mi,&nbsp;
+    Memory: {{memoryParser(k8sObject.info.data.status.allocatable.memory)}}Mi,&nbsp;
     Pods: {{k8sObject.info.data.status.allocatable.pods}}
   </aaim-k8s-object-item>
 
@@ -72,5 +72,5 @@
     </ng-container>
   </aaim-k8s-object-item>
 
-  <aaim-k8s-pod-details-list [pods]="childPods" [owner]="k8sObject" [maxCpu]="node.getCpuCapacity()" [maxMemory]="node.getMemoryCapacity()"></aaim-k8s-pod-details-list>
+  <aaim-k8s-pod-details-list [pods]="childPods" [owner]="k8sObject" [maxCpu]="getCpuCapacity()" [maxMemory]="getMemoryCapacity()"></aaim-k8s-pod-details-list>
 </div>
