--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/node/k8s-node-details/k8s-node-details.component.scss
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/node/k8s-node-details/k8s-node-details.component.scss
@@ -1,3 +1,5 @@
+@import "../../../body-kubernetes.mixins.scss";
+
 .NodeDetails {
   --status-ready-bg: #{$colorOk};
   --status-default-bg: #{$colorError};
