--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/node/k8s-nodes/k8s-nodes.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/node/k8s-nodes/k8s-nodes.component.html
@@ -32,7 +32,7 @@
     <ng-container matColumnDef="taints">
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="taints">Taints</th>
       <td mat-cell *matCellDef="let element">
-        <span [matTooltip]="{node.getTaints().map(({ key, effect }) => `${key}: ${effect}`).join("\n")}">{{(element.info.data.spec.taints || []).length}}</span>
+        <span> <!-- TODO [matTooltip]="(element.info.data.spec.taints || []).map(({ key, effect }) => `${key}: ${effect}`).join(`\n`)"> --> {{(element.info.data.spec.taints || []).length}}</span>
         <!-- TODO toolipclass whiteSpace: "pre-line" -->
       </td>
     </ng-container>
@@ -76,7 +76,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <NodeMenu object={item}/>
+        <!-- TODO <NodeMenu object={item}/> -->
       </td>
     </ng-container>
 
