--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/persistent-volume/k8s-persistent-volumes/k8s-persistent-volumes.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/persistent-volume/k8s-persistent-volumes/k8s-persistent-volumes.component.html
@@ -24,15 +24,16 @@
     <ng-container matColumnDef="capacity">
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="capacity">Capacity</th>
       <td mat-cell *matCellDef="let element">{{getCapacity()}}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="claim">
-        <th mat-header-cell *matHeaderCellDef class="claim">Claim</th>
-        <td mat-cell *matCellDef="let element">
-          <span *ngIf="element.info.data.spec.claimRef" (click)="goToElement(element.info.data.spec.claimRef)">
-            {{element.info.data.spec.claimRef.name}}
-          </span>
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="claim">
+      <th mat-header-cell *matHeaderCellDef class="claim">Claim</th>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="element.info.data.spec.claimRef" (click)="goToElement(element.info.data.spec.claimRef)">
+          {{element.info.data.spec.claimRef.name}}
+        </span>
+      </td>
+    </ng-container>
 
     <ng-container matColumnDef="age">
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="age">Age</th>
@@ -49,7 +50,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <PersistentVolumeMenu object={item}/>
+        <!-- TODO <PersistentVolumeMenu object={item}/> -->
       </td>
     </ng-container>
 
