--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/pod/k8s-pod-details-list/k8s-pod-details-list.component.scss
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/pod/k8s-pod-details-list/k8s-pod-details-list.component.scss
@@ -1,3 +1,5 @@
+@import "../../../body-kubernetes.mixins.scss";
+
 table {
   width: 100%;
 }
@@ -11,7 +13,7 @@ table {
   position: relative;
 
   .Table {
-    margin: 0 (-$margin * 3);
+    margin: 0 (-8px * 3);
 
     &.virtual {
       height: 500px;
@@ -20,11 +22,11 @@ table {
 
   .TableCell {
     &:first-child {
-      margin-left: $margin;
+      margin-left: 8px;
     }
 
     &:last-child {
-      margin-right: $margin;
+      margin-right: 8px;
     }
 
     &.name {
