--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/replicaset/k8s-replicaset-details-list/k8s-replicaset-details-list.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/replicaset/k8s-replicaset-details-list/k8s-replicaset-details-list.component.html
@@ -32,7 +32,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <ReplicaSetMenu object={replica}/>
+        <!-- TODO <ReplicaSetMenu object={replica}/> -->
       </td>
     </ng-container>
 
