--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/horizontal-pod-autoscaler/k8s-horizontal-pod-autoscaler-details/k8s-horizontal-pod-autoscaler-details.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/horizontal-pod-autoscaler/k8s-horizontal-pod-autoscaler-details/k8s-horizontal-pod-autoscaler-details.component.html
@@ -22,7 +22,7 @@
 
   <aaim-k8s-object-item [name]="'Status'" [labelsOnly]="true">
     <ng-container *ngFor="let condition of getConditions()">
-      <aaim-k8s-object-badge *ngIf="condition.isReady" [label]="condition.type" [matTooltip]="condition.tooltip" [class]="condition.type.toLowerCase()"></aaim-k8s-object-badge>
+      <aaim-k8s-object-badge *ngIf="condition.isReady" [label]="condition.type" [class]="condition.type.toLowerCase()" [matTooltip]="condition.tooltip" ></aaim-k8s-object-badge>
     </ng-container>
   </aaim-k8s-object-item>
 
