--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/job/k8s-job-details/k8s-job-details.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/job/k8s-job-details/k8s-job-details.component.html
@@ -19,7 +19,7 @@
   </aaim-k8s-object-item>
 
   <aaim-k8s-object-item [name]="'Conditions'" class="conditions" [labelsOnly]="true">
-    <aaim-k8s-object-badge *ngFor="let condition of getConditions()" [label]="condition.type" [class]="conditionClass(condition)" [matTooltip]="condition.message + '&#13;Last transition time:' +  condition.lastTransitionTime"></aaim-k8s-object-badge>
+    <aaim-k8s-object-badge *ngFor="let condition of getConditions()" [label]="condition.type" [class]="condition.type.toLowerCase()" [matTooltip]="condition.message + '&#13;Last transition time:' +  condition.lastTransitionTime"></aaim-k8s-object-badge>
   </aaim-k8s-object-item>
 
   <aaim-k8s-object-item [name]="'Completions'">
