--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/pod/k8s-pod-details-affinities/k8s-pod-details-affinities.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/pod/k8s-pod-details-affinities/k8s-pod-details-affinities.component.html
@@ -1,5 +1,5 @@
 <aaim-k8s-object-item [name]="'Affinities'" class="PodDetailsAffinities">
-  <aaim-k8s-object-param-toggler [label]="LibNodeKubernetesObjectHelpers.getAffinityNumber(k8sObject).length">
+  <aaim-k8s-object-param-toggler [label]="LibNodeKubernetesObjectHelpers.getAffinityNumber(k8sObject)">
 
     <div class="ace-container">
       <!-- TODO <AceEditor
