--- a/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/deployment/k8s-deployments/k8s-deployments.component.html
+++ b/projects/applications/infrastructure-manager/src/lib/components/body/body-kubernetes/objects/deployment/k8s-deployments/k8s-deployments.component.html
@@ -21,7 +21,7 @@
 
     <ng-container matColumnDef="pods">
       <th mat-header-cell *matHeaderCellDef class="pods">Pods</th>
-      <td mat-cell *matCellDef="let element">{{element.info.data.status.availableReplicas || 0}}/{{lement.info.data.status.replicas || 0}}}</td>
+      <td mat-cell *matCellDef="let element">{{element.info.data.status.availableReplicas || 0}}/{{element.info.data.status.replicas || 0}}}</td>
     </ng-container>
 
     <ng-container matColumnDef="replicas">
